load white list use labrary

--- a/src/Makefile
+++ b/src/Makefile
@@ -14,7 +14,7 @@ CC           = gcc
 AR           = ar
 CFLAGS       = -Wall -W -Werror
 LD           = ld
-LDFLAGS      = 
+LDFLAGS      = -lusbwall
 ARFLAGS      = cr
 RM           = rm
 RMFLAGS      = -rf
